--- a/样式-flex布局总览.html
+++ b/样式-flex布局总览.html
@@ -80,8 +80,8 @@
         <li style="height: 30px;">3</li>
         <li style="height: 40px;">4</li>
     </ul>
-    <p>align-items: center</p>
-    <ul class="flex align-item" style="height: 100px; flex-wrap: wrap;">
+    <p>align-content: space-between</p>
+    <ul class="flex align-item" style="height: 100px; flex-wrap: wrap;align-content: space-between;">
         <li style="flex-basis: 400px;">1</li>
         <li style="flex-basis: 200px;">2</li>
         <li>3</li>
