--- a/样式-flex布局总览.html
+++ b/样式-flex布局总览.html
@@ -1,6 +1,7 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>flex布局</title>
     <style>
         body {
@@ -116,7 +117,7 @@
     <ul class="flex">
         <li>1</li>
         <li>2</li>
-        <li style="width:100px;">3<br/>width:100px;</li>
+        <li>3</li>
         <li style="flex-basis: 100px">4<br/>basis:100px</li>
     </ul>
     <p>flex-shrink (item's flex-basis: 200px;)</p>
