--- a/业务-缓存配置/index.html
+++ b/业务-缓存配置/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <!-- 无效 -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>缓存测试</title>
     <link href="./test.css" rel="stylesheet" type="text/css"/>
 </head>
