🌟：增加「找到最近时间的任务」函数

--- a/业务-定时任务查重和查找.html
+++ b/业务-定时任务查重和查找.html
@@ -9,6 +9,29 @@
 😂：请打开 console 查看
 <script src="https://unpkg.com/dayjs"></script>
 <script>
+  //排序函数，配合 Array.prototype.sort 使用
+  function compare(property) {
+    return function (obj1, obj2) {
+      var value1 = obj1[property];
+      var value2 = obj2[property];
+      return value1 > value2 ? 1 : -1; // 升序
+    }
+  }
+
+  // 如果星期是["Mon", "Tue"]这样的英文数组形式，则先转换成数字的数组
+  function changeWeekEnToNum(week) {
+    const week_en = ["Mon", "Tue", "Wed", "Thur", "Fri", "Sat", "Sun"];
+    if (week.length && !parseInt(week.join(""))) {
+      const week_num = [];
+      week_en.forEach((item, index) => {
+        if (week.indexOf(item) > -1)
+          week_num.push(index + 1);
+      });
+      return week_num;
+    }
+    return week;
+  }
+
   /**
    * 基于当前，生成未来8天的时间表
    * @return {Array}
@@ -47,20 +70,6 @@
     let _missionWeekAndTime = JSON.parse(JSON.stringify(missionWeekAndTime));
     let _allWeekAndTime = JSON.parse(JSON.stringify(allWeekAndTime));
 
-    // 如果星期是["Mon", "Tue"]这样的英文数组形式，则先转换成数字的数组
-    function changeWeekEnToNum(week) {
-      const week_en = ["Mon", "Tue", "Wed", "Thur", "Fri", "Sat", "Sun"];
-      if (week.length && !parseInt(week.join(""))) {
-        const week_num = [];
-        week_en.forEach((item, index) => {
-          if (week.indexOf(item) > -1)
-            week_num.push(index + 1);
-        });
-        return week_num;
-      }
-      return week;
-    }
-
     _missionWeekAndTime.week = changeWeekEnToNum(_missionWeekAndTime.week);
     _allWeekAndTime.forEach(item => {
       item.week = changeWeekEnToNum(item.week)
@@ -79,21 +88,21 @@
     // 所有任务生成日历
     const calender = createEightDayList(timestamp);
     calender.forEach(calenderItem => {
-      _allWeekAndTime.forEach(arrItem => {
+      _allWeekAndTime.forEach(allItem => {
         //单次的任务：先赋予其星期
-        if (!arrItem.week.length) {
-          const todayMissionTimestamp = dayjs(currentDate + " " + arrItem.time).valueOf();
-          const tomorrowMissionTimestamp = dayjs(tomorrowDate + " " + arrItem.time).valueOf();
+        if (!allItem.week.length) {
+          const todayMissionTimestamp = dayjs(currentDate + " " + allItem.time).valueOf();
+          const tomorrowMissionTimestamp = dayjs(tomorrowDate + " " + allItem.time).valueOf();
 
           const missionTimestamp = todayMissionTimestamp > currentTimestamp
             ? todayMissionTimestamp
             : tomorrowMissionTimestamp;
 
-          arrItem.week.push(dayjs(missionTimestamp).day());
+          allItem.week.push(dayjs(missionTimestamp).day());
         }
         // 时间集中到day中
-        if (arrItem.week.find(item => item === calenderItem.day)) {
-          calenderItem.time.push(arrItem.time);
+        if (allItem.week.find(item => item === calenderItem.day)) {
+          calenderItem.time.push(allItem.time);
         }
       })
     });
@@ -124,22 +133,12 @@
    */
   function findLatestMission(allWeekAndTime, timestamp = undefined) {
     const current = dayjs(timestamp);
+    const currentDate = current.format("YYYY/MM/DD");
+    const tomorrowDate = current.add(1, "day").format("YYYY/MM/DD");
+    const currentTimestamp = current.valueOf();
 
     // 复制一份操作
     let _allWeekAndTime = JSON.parse(JSON.stringify(allWeekAndTime));
-
-    // 如果星期是["Mon", "Tue"]这样的英文数组形式，则先转换成数字的数组
-    function changeWeekEnToNum(week) {
-      const week_en = ["Mon", "Tue", "Wed", "Thur", "Fri", "Sat", "Sun"];
-      if (week.length && !parseInt(week.join(""))) {
-        return week_en.map((item, index) => {
-          if (week.indexOf(item) > -1) {
-            return index + 1;
-          }
-        });
-      }
-      return week;
-    }
 
     _allWeekAndTime.forEach(item => {
       item.week = changeWeekEnToNum(item.week)
@@ -149,48 +148,66 @@
     const calender = createEightDayList(timestamp);
     let calenderTimestampList = [];
     calender.forEach(calenderItem => {
-      _allWeekAndTime.forEach(arrItem => {
-        // 时间集中到day中
-        if (arrItem.week.find(item => item === calenderItem.day)) {
-          calenderItem.time.push(arrItem.time);
-          calenderTimestampList.push(dayjs(`${calenderItem.date} ${arrItem.time}`).valueOf());
+      _allWeekAndTime.forEach((allItem, index) => {
+        //单次的任务：先赋予其星期
+        if (!allItem.week.length) {
+          const todayMissionTimestamp = dayjs(currentDate + " " + allItem.time).valueOf();
+          const tomorrowMissionTimestamp = dayjs(tomorrowDate + " " + allItem.time).valueOf();
+
+          const missionTimestamp = todayMissionTimestamp > currentTimestamp
+            ? todayMissionTimestamp
+            : tomorrowMissionTimestamp;
+
+          allItem.week.push(dayjs(missionTimestamp).day());
         }
-      })
+        // 时间集中到day中
+        if (allItem.week.find(item => item === calenderItem.day)) {
+          calenderItem.time.push(allItem.time);
+          calenderTimestampList.push({
+            id: index,
+            value: dayjs(`${calenderItem.date} ${allItem.time}`).valueOf()
+          });
+        }
+      });
     });
 
     // 排序
-    calenderTimestampList = calenderTimestampList.sort();
+    calenderTimestampList = calenderTimestampList.sort(compare("value"));
 
     // 找出时间戳最接近的时间戳
-    let latestMissionTimestamp = timestamp;
+    let latestMissionId = timestamp;
     for (let i = 0; i < calenderTimestampList.length; i++) {
-      if (latestMissionTimestamp < calenderTimestampList[i]) {
-        latestMissionTimestamp = calenderTimestampList[i];
+      const item = calenderTimestampList[i];
+      if (latestMissionId < item.value) {
+        latestMissionId = item.id;
         break;
       }
     }
 
-    return dayjs(latestMissionTimestamp).format("HH:mm:ss");
+    return latestMissionId;
   }
 
   /* ----------------------------------------- 测试 ----------------------------------------- */
 
   const TIME = "2019-05-21 11:00:20"; // 此时间为星期2
+  console.log(`对应timestamp时间：${TIME}，星期${dayjs(TIME).day()}`);
   const timestamp = dayjs(TIME).valueOf();
   const allWeekAndTime = [
-    {week: [1, 2, 3, 4, 5, 6, 7], time: "00:00"},
-    {week: ["Mon", "Tue", "Wed", "Thur", "Fri", "Sat", "Sun"], time: "12:00"},
-    {week: [5, 6, 7], time: "12:00"},
-    {week: [1, 2, 3], time: "10:00"},
-    {week: [3, 4], time: "01:00"},
-    {week: [5, 6], time: "00:10"},
-    {week: [3], time: "00:01"},
-    {week: [7], time: "12:00"},
-    {week: [1], time: "00:01"},
-    {week: [], time: "11:11"},
+    {id: 0, week: [1, 2, 3, 4, 5, 6, 7], time: "00:00"},
+    {id: 1, week: ["Mon", "Tue", "Wed", "Thur", "Fri", "Sat", "Sun"], time: "12:00"},
+    {id: 2, week: [5, 6, 7], time: "12:00"},
+    {id: 3, week: [1, 2, 3], time: "10:00"},
+    {id: 4, week: [3, 4], time: "01:00"},
+    {id: 5, week: [5, 6], time: "00:10"},
+    {id: 6, week: [3], time: "00:01"},
+    {id: 7, week: [7], time: "12:00"},
+    {id: 8, week: [1], time: "00:01"},
+    {id: 9, week: [], time: "11:11"},
+    {id: 10, week: [], time: "22:22"},
   ];
-
   //const allWeekAndTime = [];
+  console.log("全任务列表", allWeekAndTime);
+  console.log("");
 
   const missionList = [
     // 单次
@@ -211,32 +228,31 @@
     {time: "10:00", week: [4], except: false},
   ];
 
+
   // 任务查重
   console.log("检查任务是否在列表中：");
   console.log(`基于时间：${TIME}，期待必须全部为 true`);
-  allWeekAndTime.forEach(item => {
-    console.log("预设任务：", JSON.stringify(item));
-  })
   missionList.forEach(item => {
     const res = checkIfTimeOverlap(allWeekAndTime, item, timestamp);
-    console.log(`时间：${item.time}，星期：${item.week}，
-    是否存在于预设任务列表中：${res}，是否符合期待：${res === item.except ? "✔️" : "❌"}`);
+    console.log(`符合期待：${res === item.except ? "✔️" : "❌"}，在预设任务列表中：${res}，${JSON.stringify(item)}`);
   });
   console.log("");
 
   // 最新任务
   console.log("找到最近要运行的任务");
   const timeList = [
-    "2019-05-21 11:00:20",
-    "2019-05-21 00:00:20",
-    "2019-05-21 00:12:20",
-    "2019-05-21 00:10:20",
-    "2019-05-22 00:10:20"
+    {time: "2019-05-21 11:00:20", except: 9},
+    {time: "2019-05-21 00:00:20", except: 3},
+    {time: "2019-05-21 00:12:20", except: 3},
+    {time: "2019-05-21 00:10:20", except: 3},
+    {time: "2019-05-22 00:10:20", except: 4},
+    {time: "2019-05-22 12:00:20", except: 10},
+    {time: "2019-05-22 20:00:20", except: 10},
   ];
-  console.log("时间列表", timeList);
   timeList.forEach(item => {
-    const res = findLatestMission(allWeekAndTime, dayjs(item).valueOf());
-    console.log(res);
+    const res = findLatestMission(allWeekAndTime, dayjs(item.time).valueOf());
+    const latestMission = allWeekAndTime[res];
+    console.log(`符合期待：${latestMission.id === item.except ? "✔️" : "❌"}，${JSON.stringify(item)}，最近任务id：${latestMission.id}`);
   });
 </script>
 </body>
