🌟：使用call更准确

--- a/业务-定时任务到时间置灰.html
+++ b/业务-定时任务到时间置灰.html
@@ -30,7 +30,7 @@
         time: last.format("HH:mm"),
         status: true
       };
-      item.check = checkIfTimeout.bind(item)();
+      item.check = checkIfTimeout.call(item);
       list.push(item);
     }
   }
